# mdot11

./: .gitignore  CMakeLists.txt  README.md  default.nix  derivation.nix  flake.nix  result  shell.nix
.github/workflows/: ci-linux.yml
src/fhmdot/: CMakeLists.txt
src/fhmdot/cli/: create_maximal_entangled_state.cpp  fhmdot_exe.cpp
src/fhmdot/core/: gate.cpp
src/fhmdot/include/: babel_type.hpp  general.hpp  utils.hpp
src/fhmdot/routine/: fg_multiply.hpp  fg_svd.hpp
src/fhmdot/utils/: file_content.hpp  utils.hpp  yofi.hpp
src/fmd/: operators.py
src/pybind/: CMakeLists.txt  cool_example.cpp  example.cpp  fmd_operators.cpp  fmd_routine.cpp  mdot_operators.cpp  mdot_routine.cpp  operators_mdot.cpp  pyhmatrix.hpp  utils.hpp  wrapper.cpp
src/pybind/include/: pybabel_type.hpp  translate.hpp
tests/cpp/sandbox/: CMakeLists.txt  sandbox.cpp
tests/cpp/unit/: CMakeLists.txt  test_babel_type.cpp  test_hmatrix.cpp  test_utils.cpp
tests/cpp/validation/: CMakeLists.txt
tests/cpp_benchmark/: CMakeLists.txt
tests/cpp_unit/: CMakeLists.txt  test_babel_type.cpp  test_dummy.cpp  test_file_header.cpp  test_qnum.cpp  test_svd.cpp  test_yofi.cpp
tests/cpp_validation/: validate_apply_gate.cpp
tests/python/: CMakeLists.txt
tests/python_benchmark/: benchmark_apply_mm.py  benchmark_apply_mm_plot.py
tests/python_unit/: CMakeLists.txt  conftest.py  test_dependency.py  test_mdot_operators.py  test_mdot_routine.py  test_mdot_routine_apply_mm.py  test_mdot_routine_apply_mm_with_gate.py  test_mdot_routine_lanczos.py  test_mdot_routine_theta_no_gate.py  test_mdot_routine_theta_with_gate.py
